Fix: Input login color invisible (#80)

--- a/Alize.Platform.Client/src/styles.scss
+++ b/Alize.Platform.Client/src/styles.scss
@@ -30,8 +30,24 @@ body {
   overflow: auto;
 }
 
-.mat-row,
-.mat-header-row {
+.main-theme {
+  .mat-form-field {
+    color: rgba(0, 0, 0, 0.87);
+    
+    &.mat-focused {
+      .mat-form-field-label {
+        color: rgb(0, 0, 0, 0.6);
+      }
+
+      .mat-form-field-ripple {
+        background-color: rgb(0, 0, 0, 0.6);
+      }
+    }
+  }
+
+  .mat-input-element {
+    caret-color: black;
+  }
 }
 
 .mat-cell,
